# SiTrInEo

./: .gitignore  CMakeLists.txt  Mimosa-lxplus-setup.sh  Mimosa-private-setup.sh  README.md
Bfield-ref/: TCEMfield.cxx  TCEMfield.hxx  TCEMfieldSetup.cxx  TCEMfieldSetup.hxx
MIMOSA_DIGITIZER/: CMakeLists.txt
MIMOSA_DIGITIZER/include/: digit_b2.h
MIMOSA_DIGITIZER/src/: digit_b2.cc  digit_b2.h
MIMOSA_DIGITIZER/trunk/: Compile.sh  Makefile  README
MIMOSA_DIGITIZER/trunk/include/: digit_b2.h
MIMOSA_DIGITIZER/trunk/src/: digit_b2.cc
MyTestBeam_Geant4Simu/: CheckGeometry.cc  GNUmakefile  Settings.sh  err.err  geant4make.sh  logCompile.txt  run1.mac
MyTestBeam_Geant4Simu/.svn/: all-wcprops  entries
MyTestBeam_Geant4Simu/.svn/text-base/: CMakeLists.txt.svn-base  G4History.macro.svn-base  Settings.sh.svn-base
MyTestBeam_Geant4Simu/MimosaSimu/: vis.mac
MyTestBeam_Geant4Simu/MimosaSimu/.svn/: all-wcprops  entries
MyTestBeam_Geant4Simu/MimosaSimu/.svn/text-base/: CMakeLists.txt.svn-base  MimosaSimu.cc.svn-base
MyTestBeam_Geant4Simu/MimosaSimu/Authentic/.svn/: all-wcprops  entries
MyTestBeam_Geant4Simu/MimosaSimu/include/: MimosaSimuActionInitialization.hh  MimosaSimuDetectorConstruction.hh  MimosaSimuField.hh  MimosaSimuFieldMessenger.hh  MimosaSimuFieldSetup.hh  MimosaSimuSetup.hh  digit_b2.h
MyTestBeam_Geant4Simu/MimosaSimu/include/.svn/: all-wcprops  entries
MyTestBeam_Geant4Simu/MimosaSimu/include/.svn/text-base/: MimosaSimuDetectorConstruction.hh.svn-base  MimosaSimuHistoManager.hh.backup.svn-base  MimosaSimuSetup.hh.svn-base
MyTestBeam_Geant4Simu/MimosaSimu/src/: MimosaSimuActionInitialization.cc  MimosaSimuDetectorConstruction.cc  MimosaSimuField.cc  MimosaSimuFieldMessenger.cc  MimosaSimuFieldSetup.cc  MimosaSimuPrimaryGeneratorAction.cc
MyTestBeam_Geant4Simu/MimosaSimu/src/.svn/: all-wcprops  entries
MyTestBeam_Geant4Simu/MimosaSimu/src/.svn/text-base/: MimosaSimuDetectorConstruction.cc.svn-base  MimosaSimuEventAction.cc.svn-base  MimosaSimuPrimaryGeneratorAction.cc.svn-base  MimosaSimuSetup.cc.svn-base  MimosaSimuTrackerSD.cc.svn-base
MyTestBeam_Geant4Simu/config/: runXXX.cfg.Combine
MyTestBeam_Geant4Simu/config/.svn/: all-wcprops  entries
MyTestBeam_Geant4Simu/config/.svn/text-base/: runXXX.cfg.Beam_Test_example.svn-base  runXXX.cfg.Source_Sr90_example.svn-base
MyTestBeam_Geant4Simu/macros/.svn/: all-wcprops  entries
Plotting/: run.sh  test.C  test.h  test_XY.C  x_run.C
SetupScripts/: cmake_setup.sh  setenv_knu.sh
TestBeam_Geant4Simu/trunk/: gui.mac  init_vis.mac  run2.mac
TestBeam_Geant4Simu/trunk/MimosaSimu/Authentic/: MimosaSimuAuthenticTrackerHit.hh
TestBeam_Geant4Simu/trunk/MimosaSimu/include/: MimosaSimuTrajectorySD.hh
TestBeam_Geant4Simu/trunk/MimosaSimu/src/: MimosaSimuDetectorConstruction.cc  MimosaSimuDetectorMessenger.cc  MimosaSimuHistoManager.cc
TestBeam_Geant4Simu/trunk/config/: runXXX.cfg.Beam_Test_example.root
TestBeam_Geant4Simu_MagField/: CMakeLists.txt  CheckGeometry.cc  G4History.macro  GNUmakefile  GNUmakefile.v2  MimosaSimu.cc  README  Settings.sh  geant4make.sh  vis.mac
TestBeam_Geant4Simu_MagField/Authentic/: MimosaSimuAuthenticTrackerHit.cc
TestBeam_Geant4Simu_MagField/MimosaSimu/: MimosaSimu.cc.backup
TestBeam_Geant4Simu_MagField/MimosaSimu/include/: MimosaSimuDetectorMessenger.hh  MimosaSimuHistoManager.hh  MimosaSimuMagneticField.hh  MimosaSimuTrackerHit.hh  MimosaSimuTrackerSD.hh  MimosaSimuTrajectoryHit.hh.backup
TestBeam_Geant4Simu_MagField/MimosaSimu/src/: MimosaSimuHistoManager.cc.backup  MimosaSimuMagneticField.cc  MimosaSimuPrimaryGeneratorAction.cc  MimosaSimuSetup.cc  MimosaSimuTrackerHit.cc
TestBeam_Geant4Simu_MagField/config/: runXXX.cfg.BT.sitrineo_d5_l5_s10_B02_L20  runXXX.cfg.Beam_Test_example  runXXX.cfg.Beam_Test_example.gdml  runXXX.cfg.Combine.root  runXXX.cfg.Source_Sr90_example.gdml  runXXX.cfg.Source_Sr90_example.root  sitrineo_BT_d5_l5_s10_B02_L20.cfg
TestBeam_Geant4Simu_MagField/include/: MimosaSimuActionInitialization.hh  MimosaSimuDetectorConstruction.hh  MimosaSimuDetectorMessenger.hh  MimosaSimuEventAction.hh  MimosaSimuHistoManager.hh  MimosaSimuHistoManager.hh.backup  MimosaSimuMagneticField.hh  MimosaSimuPrimaryGeneratorAction.hh  MimosaSimuRunAction.hh  MimosaSimuSetup.hh  MimosaSimuTrackerHit.hh  MimosaSimuTrackerSD.hh  MimosaSimuTrajectoryHit.hh  MimosaSimuTrajectoryHit.hh.backup  MimosaSimuTrajectorySD.hh  digit_b2.h
TestBeam_Geant4Simu_MagField/macros/: G4History.macro
TestBeam_Geant4Simu_MagField/src/: MimosaSimuActionInitialization.cc  MimosaSimuDetectorConstruction.cc  MimosaSimuDetectorConstruction.cc.backup  MimosaSimuDetectorMessenger.cc  MimosaSimuEventAction.cc  MimosaSimuHistoManager.cc  MimosaSimuHistoManager.cc.backup  MimosaSimuMagneticField.cc  MimosaSimuPrimaryGeneratorAction.cc  MimosaSimuRunAction.cc  MimosaSimuSetup.cc  MimosaSimuTrackerHit.cc  MimosaSimuTrackerSD.cc  MimosaSimuTrajectoryHit.cc  MimosaSimuTrajectorySD.cc  MimosaSimuTrajectorySD.cc.backup
TestBeam_Geant4Simu_MagField/trunk/MimosaSimu/: MimosaSimu.cc
TestBeam_Geant4Simu_MagField/trunk/MimosaSimu/include/: MimosaSimuEventAction.hh  MimosaSimuRunAction.hh
TestBeam_Geant4Simu_MagField/trunk/MimosaSimu/src/: MimosaSimuDetectorConstruction.cc  MimosaSimuDetectorConstruction.cc.backup  MimosaSimuRunAction.cc  MimosaSimuTrajectorySD.cc
TestBeam_Geant4Simu_MagField/trunk/config/: runXXX.cfg.Combine  runXXX.cfg.Combine.gdml  runXXX.cfg.Source_Sr90_example
